2009-10-14  Robert Millan  <rmh.grub@aybabtu.com>

	Refer to kernel of FreeBSD "kFreeBSD" to avoid confusion between
	the Operating System (FreeBSD) and its kernel (kernel of FreeBSD).

	* loader/i386/bsd.c (grub_freebsd_boot): Read kernel environment
	from "kFreeBSD" namespace (rather than "FreeBSD").  Update all
	users.

	(GRUB_MOD_INIT (bsd)): Rename "freebsd" command to "kfreebsd",
	"openbsd" to "kopenbsd", "netbsd" to "knetbsd", "freebsd_loadenv"
	to "kfreebsd_loadenv", "freebsd_module" to "kfreebsd_module",
	and "freebsd_module_elf" to "kfreebsd_module_elf".  Update all
	users.

2009-10-12  Robert Millan  <rmh.grub@aybabtu.com>

	* term/tparm.c: Switch to GPLv3.

2009-10-09  Robert Millan  <rmh.grub@aybabtu.com>

	* include/grub/i386/cpuid.h: Add header protection.

2009-10-09  Robert Millan  <rmh.grub@aybabtu.com>

	Fail gracefuly when attempting to load 64-bit kFreeBSD on IA32 CPU.

	* include/grub/i386/cpuid.h: New file.
	* commands/i386/cpuid.c: Include `<grub/i386/cpuid.h>'.
	(has_longmode): Rename to ...
	(grub_cpuid_has_longmode): ... this.  Update all users.  Remove
	`static' attribute.
	* loader/i386/bsd.c: Include `<grub/i386/cpuid.h>'.
	(grub_bsd_load_elf): Fail if load of 64-bit kernel was requested
	on a CPU that doesn't implement AMD64 instruction set.

2009-10-06  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.in (docs/stamp-vti): Depend on configure.ac as well, so
	that version.texi is rebuilt on version number changes.

2009-10-06  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.in: Don't set info_INFOS unless makeinfo was found.
	Fixes bug #27602.

2009-10-06  Colin Watson  <cjwatson@ubuntu.com>

	* util/i386/pc/grub-install.in: Source
	${libdir}/grub/grub-mkconfig_lib before option processing, in order
	that the --grub-probe option will work.
	* util/sparc64/ieee1275/grub-install.in: Likewise.

2009-10-05  Robert Millan  <rmh.grub@aybabtu.com>

	* configure.ac: Bump version to 1.97~beta4.
