@@ -161,13 +161,6 @@ CLEANFILES += $(grub-mkconfig_SCRIPTS)
 
 grub-mkconfig_DATA += util/grub.d/README
 
-# For grub-dumpbios
-grub-dumpbios: util/grub-dumpbios.in config.status
-	./config.status --file=$@:$<
-	chmod +x $@
-sbin_SCRIPTS += grub-dumpbios
-CLEANFILES += grub-dumpbios
-
 # Filing systems.
 pkglib_MODULES += fshelp.mod fat.mod ufs1.mod ufs2.mod ext2.mod ntfs.mod \
 	ntfscomp.mod minix.mod hfs.mod jfs.mod iso9660.mod xfs.mod	\
